2022-06-21  Deri James  <deri@chuzzlewit.myzen.co.uk>

	[gropdf]: Add more search paths to the Foundry file.

	* font/devpdf/Foundry.in: Use the directory specified with the
	config flag --with-urw-fonts-dir to populate the default foundry
	as well as the U foundry. Important to populate the download
	file with font files to embed the fonts not part of the base
	pdf fonts or if user wants all fonts embedded.

2022-06-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/an-ext.tmac (UR, MT): Fix problem with hyphenation
	occuring before the end of the line when the line length was not
	the device default (common for man pages at the terminal) and
	hyperlinks were enabled.  The issue is that the new environment
	we created inherits the default environment's line length (its
	state at troff initialization, prior to macro package loading
	and configuration).  This latent issue was exposed by post-groff
	1.22.4 changes to enable the hyphenation of link text and add
	the hyperlink feature.  Fix it by copying the line length at the
	time the macro is called, which is necessarily after man(7)
	sets up the line length, to the new environment.

2022-06-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/grops/psrm.cpp (resource_manager::output_prolog):
	(resource_manager::supply_resource):
	(resource_manager::read_download_file): Update diagnostic
	message language and report underlying problem encountered by
	system when failing to open files.  This will probably be the
	text for ENOENT in most cases, but should help avoid frustration
	in those where it isn't.

2022-06-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/grops/psrm.cpp
	(resource_manager::read_download_file): Align diagnostic message
	wording with gropdf in the same circumstance.

2022-06-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Throw warning in font category when a font selection